--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,30 @@
 
 /* Your CSS Code here. */
+*{
+	margin:0;
+	padding:0;
+}
+.container{
+	
+    display:flex;
+	justify-content:space-between
+}
+#box1{
+	height:60px;
+	width:60px;
+	order:1;
+	background-color:red;
+}
+
+#box2{
+	height:60px;
+	width:60px;
+	order:3;
+	background-color:blue;
+}
+#box3{
+	height:60px;
+	width:60px;
+	
+	background-color:green;
+}
